--- a/CVFINAL.html
+++ b/CVFINAL.html
@@ -25,7 +25,7 @@
 							<a href="mailto:ntiibushitse.arsene@gmail.com">ntibushitse.arsene@gmail.com</a></div>
 							<div class="item"><i class="birthday icon"></i>08/10/1991</div>
 							<div class="item">
-								<i class="mobile icon"></i>+33 7 4242 020 58</div>
+								<i class="mobile icon"></i>+33 7 8330 020 58</div>
 							</div>
 						</div>
 						<div class="ui  teal inverted center aligned segment"><h2>Techno web utilisé</h2></div>	
@@ -64,7 +64,7 @@
 						</div>
 						<div class="ui grid">
 							<div class="six wide column">Mars Avril 2016 </div>
-							<div class="six wide column">C2i Micro | Technicien  de Maintance een informatique   </div>
+							<div class="six wide column">C2i Micro | Technicien  de Maintance en informatique   </div>
 							<div class="four wide column">171 Avenue de Muret 31130</div>
 						</div>
 						<div class="ui grid">
@@ -104,7 +104,7 @@
 						<div class="ui teal inverted center aligned segment"><h2>Loisirs</h2></div>
 						<div class="ui grid">
 							<div class="six wide column">Membre d'un groupe de musique electronic depuis 2006</div>
-							<div class="six wide column">Kepppler & Kessler </div>
+							<div class="six wide column">Kepppler &amp Kessler </div>
 							<div class="four wide column"> 2 EP 3 Titre </div>
 						</div>
 
